# terminal_diplomacy

./: Cargo.toml  README.md  fixes.md  test.py  troubleshoot.md  unstaged_changes.txt
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/auth/: session.rs
cli/src/commands/: connect.rs  create.rs  join.rs  login.rs  map.rs  order.rs  register.rs  util.rs
cli/src/interactive/: mod.rs  state_machine.rs  util.rs
cli/src/interactive/states/: mod.rs  show_orders.rs  show_units.rs  terminal_state.rs
cli/src/interactive/states/convoy_sm/: choose_destination_of_convoy.rs  choose_unit_to_convoy.rs  confirm_convoy.rs  convoy.rs  mod.rs
cli/src/interactive/states/hold_sm/: confirm_hold.rs  mod.rs
cli/src/interactive/states/move_sm/: confirm_move.rs  mod.rs  pick_move.rs
cli/src/interactive/states/support_sm/: choose_support_dest.rs  confirm_support.rs  mod.rs  select_supported_unit.rs  select_unit.rs  select_unit_to_support.rs  sleect_support_type.rs
cli/src/rules/: fake_context.rs  game_context.rs  mod.rs  order_builder.rs
cli/src/rules/strategies/: command_strategy.rs  mod.rs  move_stategy.rs  order_strategy.rs  unit_strategy.rs
cli/tests/: test_commands.rs
server/: Cargo.toml
server/src/: main.rs
server/src/auth/: connections_manager.rs  mod.rs  session.rs
server/src/data/: connection_pool.rs  game.rs  mod.rs  user.rs
server/src/data/startup/: schema.sql  start_db.sh
server/src/game/: game_handler.rs  game_instance.rs  game_registry.rs  game_repository.rs  game_service.rs  mod.rs
server/src/move/: move_service.rs
server/src/order/: mod.rs  order_collector.rs  order_repository.rs  order_service.rs
(+4 files in other folders)
