[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
# Used to parse the diplomacy units 
diplomacy = {version = "0.2.0", features = ["serde"]} 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
num_enum = "0.7"

common = { path = "../common" }
inquire = "0.9.1"
