[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
# Used to parse the diplomacy units 
diplomacy = {version = "0.2.0", features = ["serde"]} 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
num_enum = "0.7"

common = { path = "../common" }
inquire = "0.9.1"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["net", "io-util", "macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
mockall = "0.14.0"
async-trait = "0.1.89"
