[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19.11"
tokio = {version = "^1", features = ["full"]}
sea-orm = {version = "^0.12.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
# This is used to when constructing user and other created at models
time = "0.3"
common = { path = "../common" }

# This is used to create unique identifies for games
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
diplomacy = { version = "0.2.0", features = ["serde"] }
serde_json = "1.0.145"
rand = "0.9.2"
